@@ -1,5 +1,6 @@
 javac --module-path .\Libs\javafx\lib --add-modules=javafx.controls,javafx.fxml --class-path "..;.;" .\SceneSwitcher.java
 javac --module-path .\Libs\javafx\lib --add-modules=javafx.controls,javafx.fxml --class-path "..;.;" .\game\splashcontroller.java
 javac --module-path .\Libs\javafx\lib --add-modules=javafx.controls,javafx.fxml --class-path "..;.;" .\game\character.java
+javac --module-path .\Libs\javafx\lib --add-modules=javafx.controls,javafx.fxml --class-path "..;.;" .\game\food.java
 javac --module-path .\Libs\javafx\lib --add-modules=javafx.controls,javafx.fxml --class-path "..;.;" .\game\gamecontroller.java
 javac --module-path .\Libs\javafx\lib --add-modules=javafx.controls,javafx.fxml --class-path "..;.;" .\Main.java
